# Glossa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: build.yml
crates/kernel/: Cargo.toml
crates/kernel/src/: agent.rs  app.rs  client.rs  config.rs  lib.rs  memory.rs  prompt.rs  schema.rs  store.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
docs/: CHANGELOG.md  v0.4-web-architecture.mmd
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  web.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  main.tsx  platform.ts  styles.css  themes.css  types.ts
ui/src/components/: ChatBubble.tsx  ConfirmDialog.tsx  Conversation.tsx  Dropdown.tsx  InputBar.tsx  Logo.tsx  Popover.tsx  Reasoning.tsx  SentenceCard.tsx  SentenceView.tsx  Settings.tsx  Sidebar.tsx  TranslationBlock.tsx  UsageCard.tsx  VocabBook.tsx  WordCard.tsx
