[workspace]
resolver = "2"
members = ["crates/kernel", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
thiserror = "2"
