[package]
name = "glossa"
description = "Glossa — 翻译 + 英语学习"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "glossa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures-util = "0.3"
kernel = { path = "../crates/kernel" }
