[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
futures-util = "0.3"
tokio-stream = "0.1"
toml = "0.8"
directories = "6"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
