[package]
name = "glossa-server"
description = "Glossa web server — 浏览器/移动端访问"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "glossa-server"
path = "src/main.rs"

[dependencies]
kernel = { path = "../kernel" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
rust-embed = "8"
mime_guess = "2"
if-addrs = "0.13"
